--- a/DEV/template.html
+++ b/DEV/template.html
@@ -31,6 +31,7 @@
       <div class="container">
         <nav class="blog-nav">
           <a class="blog-nav-item active" href="/">Home</a>
+          <a class="blog-nav-item" href="/sections">Sections</a>
           <a class="blog-nav-item" href="#">About</a>
         </nav>
       </div>
@@ -58,7 +59,7 @@
 
         <div class="col-xs-12 col-sm-3 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
-            <div class="post_avatar post_meta-avatar"><img width="50" class="post_avatar-image" src="https://avatars0.githubusercontent.com/u/2885156?s=460&v=4"></div>          
+            <div class="post_avatar post_meta-avatar"><img width="50" class="post_avatar-image" src="//cedricfrancoys.local/blog/me.jpg"></div>
             <h4>Ced</h4>
             <p>
             <div ng-include="'/blog/{{ section }}/me.html'"></div>
