--- a/DEV/template.html
+++ b/DEV/template.html
@@ -59,7 +59,7 @@
 
         <div class="col-xs-12 col-sm-3 blog-sidebar">
           <div class="sidebar-module sidebar-module-inset">
-            <div class="post_avatar post_meta-avatar"><img width="50" class="post_avatar-image" src="//cedricfrancoys.local/blog/me.jpg"></div>
+            <div class="post_avatar post_meta-avatar"><img width="50" class="post_avatar-image" src="/blog/me.jpg"></div>
             <h4>Ced</h4>
             <p>
             <div ng-include="'/blog/{{ section }}/me.html'"></div>
