--- a/me.html
+++ b/me.html
@@ -2,6 +2,4 @@ Hello, I'm Cedric.<br />
 
 I've always been pasionate about understanding how things work: I wrote my first program at 10; learned C and C++ at 14; and started my own IT company at 26.<br />
 <br />
-I have a rich professional career of almost 20 years during which I sometimes had the opportunity to work as software architect and fullstack developer.<br />
-<br />
-These articles illustrate some Dev best-practices along with related concepts of <a href="https://github.com/cedricfrancoys/equal-framework">eQual framework</a>.
+I have a rich professional career of nearly 20 years during which I had the opportunity to face many challenges in a wide variety of fields. These articles present some of them ...
