--- a/template.html
+++ b/template.html
@@ -80,7 +80,8 @@
     </div><!-- /.container -->
 
     <footer class="blog-footer">
-      <p>Blog template built for <a href="http://getbootstrap.com">Bootstrap</a> by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+      <p>© Tous droits réservés &nbsp; Cédric Françoys - IT Consultant &nbsp; &bull; &nbsp; +32 (0) 486 15 24 19 &nbsp; &bull; &nbsp; TVA BE 0 712 921 195 &nbsp; &bull; &nbsp; hello@cedricfrancoys.be
+	  </p>
       <p>
         <a href="#">Back to top</a>
       </p>
