--- a/QN/me.html
+++ b/QN/me.html
@@ -4,4 +4,4 @@ I've always been pasionate about understanding how things work: I wrote my first
 <br />
 I have a rich professional career of almost 20 years during which I sometimes had the opportunity to work as software architect and fullstack developer.<br />
 <br />
-These articles illustrate some Dev best-practices along with related concepts of <a href="https://github.com/cedricfrancoys/equal-framework">eQual framework</a>.
+These articles illustrate some Dev best-practices along with related concepts of <a href="https://github.com/cedricfrancoys/qinoa">Qinoa framework</a>.
