--- a/QN/header.html
+++ b/QN/header.html
@@ -1,2 +1,2 @@
 <h1 class="blog-title">cf/QN</h1>
-<p class="lead blog-description">A HTTP-native language agnostic framework.</p>
+<p class="lead blog-description">A HTTP-native &amp; language-agnostic framework.</p>
