--- a/DevOps/header.html
+++ b/DevOps/header.html
@@ -1,2 +1,2 @@
-<h1 class="blog-title">cf/DEV</h1>
-<p class="lead blog-description">Fullstack R&amp;D and best-practices for modern Apps.</p>
+<h1 class="blog-title">cf/DevOps</h1>
+<p class="lead blog-description">Infrastructure, Operations and Administation ... the virtual way.</p>
