--- a/DevOps/me.html
+++ b/DevOps/me.html
@@ -4,4 +4,4 @@ I've always been pasionate about understanding how things work: I wrote my first
 <br />
 I have a rich professional career of almost 20 years during which I sometimes had the opportunity to extend my knowledge in DevOps and System administration.<br />
 <br />
-These articles illustrate some Dev best-practices along with related concepts of <a href="https://github.com/cedricfrancoys/equal-framework">eQual framework</a>.
+These articles illustrate how infrastructure administration is an interal part of an Agile strategy.
